[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.3.1", features = ["staking"] }
sylvia = "0.8.1"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
thiserror = "1.0.44"

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
sylvia = { version = "0.8.1", features = ["mt"] }