[package]
name = "counting-contract"
version = "0.1.0"
authors = ["Alex Cucer <alex@syndika.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.4.1", features = ["staking", "ibc3", "stargate"] }
sylvia = "0.8.1"
schemars = "0.8.15"
cosmwasm-schema = "1.5.0"
serde = "1.0.192"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
thiserror = "1.0.50"
cw2 = "1.1.1"

[dev-dependencies]
anyhow = "1.0.75"
cw-multi-test = "0.16.5"
sylvia = { version = "0.8.1", features = ["mt"] }
